# helpbot-pageturner-book

./: .env.example  .gitignore  CLAUDE.md  README.md  eval_intent.py  main.py  pyproject.toml
.github/workflows/: ci.yml
helpbot/: __init__.py  chat.py  config.py  conversation.py  otp.py  output.py  prompts.py  registry.py  registry.toml  utils.py
helpbot/db/: __init__.py  helpbot.db  schema.sql  seed.sql
helpbot/tools/: __init__.py  add_numbers.py  loader.py
helpbot/tools/engine/: __init__.py  base.py  loader.py  session.py
helpbot/tools/tools_catalog/: account.py  books.py  delivery.py  digital.py  gifts.py  identity.py  orders.py  promotions.py  returns.py
tests/: test_conversation.py  test_db.py  test_output.py  test_tool_engine.py  test_tools_catalog.py
