[project]
name = "helpbot-project"
version = "0.1.0"
description = "HelpBot — AI-powered customer support chatbot for PageTurner Books, built progressively across 7 modules using the Claude API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "python-dotenv>=1.2.2",
]
